// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cm should change 1`] = `
<div>
  <div>
    身高: 
    <input
      data-testid="cm"
      name="cm"
      value="165"
    />
  </div>
  <div>
    體重: 
    <input
      data-testid="kg"
      name="kg"
      value=""
    />
  </div>
  <button>
    計算!
  </button>
  <div>
    BMI: 
    
     
  </div>
</div>
`;

exports[`kg should change 1`] = `
<div>
  <div>
    身高: 
    <input
      data-testid="cm"
      name="cm"
      value=""
    />
  </div>
  <div>
    體重: 
    <input
      data-testid="kg"
      name="kg"
      value="50"
    />
  </div>
  <button>
    計算!
  </button>
  <div>
    BMI: 
    
     
  </div>
</div>
`;

exports[`should HW4 1`] = `
<div>
  <div>
    身高: 
    <input
      data-testid="cm"
      name="cm"
      value=""
    />
  </div>
  <div>
    體重: 
    <input
      data-testid="kg"
      name="kg"
      value=""
    />
  </div>
  <button>
    計算!
  </button>
  <div>
    BMI: 
    
     
  </div>
</div>
`;

exports[`should calculate 1`] = `
<div>
  <div>
    身高: 
    <input
      data-testid="cm"
      name="cm"
      value="165"
    />
  </div>
  <div>
    體重: 
    <input
      data-testid="kg"
      name="kg"
      value="50"
    />
  </div>
  <button>
    計算!
  </button>
  <div>
    BMI: 
    18.37
     
  </div>
</div>
`;
